# bubbles-bot-rs

./: .env  Cargo.toml  README.md  database.sqlite  database.sqlite-shm  database.sqlite-wal  run.bat
migrations/: 20220308164738_initial.sql  20220311205605_user_table.sql  20220311205612_gold_table.sql
src/: main.rs
src/commands/: request.rs
src/database/: mod.rs
