[package]
authors = ["MadJayQ <jithornton1996@gmail.com>"]
edition = "2018"
name = "bubbles-bot-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
lazy_static = "1.4.0"
async_once = "0.2.6"
once_cell = "1.10.0"

[dependencies.tokio]
features = ["macros", "signal", "rt-multi-thread"]
version = "1.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "framework", "standard_framework", "cache"]
version = "0.10"

[dependencies.sqlx]
version = "0.5.7"
features = ["runtime-tokio-rustls", "sqlite", "offline"]
